# codex

./: .bundle-baseline.json  .c8rc.json  .gitattributes  .gitignore  .lighthouserc.json  .prettierrc  .versionrc.json  Architecture.md  Build.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  EDR.md  Hotkeys_ru.md  PLAN-IMPROVEMENT.md  PLAN.md  PROJECT_DESCRIPTION.md  README.md  RELEASE.md  TECH_SPEC_PROMPT_RU.md  UserGuide_ru.md  dev_server.py  docker-compose.yml  electron-builder.yml  eslint.config.js  next.config.ts  package-lock.json  package.json  plan.md  prisma.config.ts  tsconfig.json  vite.config.js  webpack.config.js
.github/: dependabot.yml
.github/workflows/: build-installer.yml  build-windows-exe.yml  ci.yml  main.yml  windows-installer-release.yml
G-claude-repair-ocr-bugs-gQxxl (1)/G-claude-repair-ocr-bugs-gQxxl/: README.md
app/: app.js  globals.css  index.html  index.tsx  layout.tsx  manifest.json  page.tsx  styles.css  sw.js  types.d.ts
app/core/: PdfEngine.ts  TextLayerRenderer.ts
app/dashboard/: layout.tsx  page.tsx
app/hooks/: use-animated-value.ts  use-keyboard-shortcut.ts
app/lib/: constants.ts  mock-data.ts  prisma.ts  utils.ts
app/locales/: ar.json  de.json  en.json  es.json  fr.json  ja.json  ko.json  pt.json  ru.json  zh.json
app/login/: page.tsx
app/modules/: a-star.ts  a11y.js  ab-testing.ts  access-control.ts  action-wizard.js  activation-fns.ts  actor.ts  adapters.js  aho-corasick.ts  ai-backend.js  ai-features.js  analytics-tracker.ts  animation-utils.ts  annotation-controller.js  annotation-export.js  annotations-core.js  api-client.ts  app-badge.ts  app-init-phase2.js  app-persistence.js  app-persistence.ts  array-utils.ts  asset-manager.ts  ast-builder.ts  ast-evaluator.ts  async-iter.ts  async-iterator-utils.ts  async-lock.js  async-lock.ts  async-utils.ts  attachment-manager.js  audit-trail.ts  auto-scroll.js  autosave.js  avl-tree.ts  b-tree.ts  background-fetch.ts  backtracking.ts  barcode-detection.ts  barcode-reader.js  (+647 more)
app/public/: sw.js
app/stores/: command-palette.ts  notifications.ts  sidebar.ts
app/styles/: annotations.css  base.css  canvas.css  index.css  layout.css  misc.css  modals.css  resize.css  sidebar.css  toast.css  tokens.css  toolbar.css  toolbox-overlay.css  tooltip.css
app/types/: index.ts
config/: hotkeys.json
docs/: architecture.md  backlog.md  components.md  execution-status.md  product-plan.md  release-notes.md
electron/: db-init.ts  main.js  main.ts  preload.ts  tsconfig.json
electron-dist/: main.js  preload.js
installer/: OfflineDocStudio.iss  OfflineDocStudio.nsi
prisma/: schema.prisma  seed.ts
resources/: app.manifest
samples/: session.ods
scripts/: analyze-bundle.js  build_final_installer_only.sh  build_installer_now.sh  build_windows_bootstrap_exe.sh  build_windows_installer.ps1  build_windows_nsis_installer.sh  build_windows_release_bundle.ps1  build_windows_stub_installer.sh  check-bundle-size.js  export_installer_metadata.py  fetch_windows_release.py  fetch_windows_release.sh  generate_release_manifest.py  install_local.sh  obfuscate-dist.js  pdf_edit_engine.py  register_file_associations.ps1  release.sh  release_with_installer.sh  requirements-pdf-edit.txt  run_installed.sh  verify_installer_payload.py  verify_installer_ready.py  verify_release.py  verify_windows_exe.py  verify_windows_release.ps1
src/: main.cpp
src-tauri/: Cargo.toml  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: lib.rs
src/core/: annotation_store.cpp  annotation_store.h  app_config.cpp  app_config.h  application.cpp  application.h  cli_options.cpp  cli_options.h  command_palette.cpp  command_palette.h  document_model.h  document_session.cpp  (+18 more)
tests/: core_smoke_tests.cpp  nightly-soak.js
types/: electron.d.ts
windows-context-menu/: install-context-menu.ps1  uninstall-context-menu.ps1
(+762 files in other folders)
